<resources>
    <string name="app_name">What\'s New?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="batman_alfred">And the subject of our inquiry, Master Wayne? -Alfred</string>
    <string name="settings">Settings</string>
    <string name="go_back">Go Back</string>
    <string name="change_country">Change Country</string>
    <string name="article_title">Article Title</string>
    <string name="https_example_com">https://example.com</string>
    <string name="choose_country_tv">Choose the country you want to see its news:</string>
    <string name="united_states">United States</string>
    <string name="brazil">Brazil</string>
    <string name="egypt">Egypt</string>
    <string name="germany">Germany</string>
    <string name="save">Save</string>
</resources>