<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/main"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/choose_country_tv"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:id="@+id/countries_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/us_rbtn"
            android:text="@string/united_states"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/br_rbtn"
            android:text="@string/brazil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/eg_rbtn"
            android:text="@string/egypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/de_rbtn"
            android:text="@string/germany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Button
        android:id="@+id/save_country_btn"
        android:text="@string/save"
        android:layout_marginTop="16dp" android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>