<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:alignmentMode="alignMargins"
    android:useDefaultMargins="true"
    android:padding="16dp"
    tools:context=".CategoryActivity">

    <TextView
        android:text="@string/batman_alfred"
        android:layout_columnWeight="2"
        android:layout_columnSpan="2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:paddingVertical="16dp"
        android:textStyle="bold|italic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/business_cv"
        android:layout_height="120dp"
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        app:cardCornerRadius="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/business"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/entertainment_cv"
        android:layout_height="120dp"
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        app:cardCornerRadius="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/entertainment"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/general_cv"
        android:layout_height="120dp"
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        app:cardCornerRadius="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/general"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/health_cv"
        android:layout_height="120dp"
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        app:cardCornerRadius="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/health"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/science_cv"
        android:layout_height="120dp"
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        app:cardCornerRadius="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/science"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sports_cv"
        android:layout_height="120dp"
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        app:cardCornerRadius="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sports"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/technology_cv"
        android:layout_height="120dp"
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        app:cardCornerRadius="24dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/technology"/>

    </androidx.cardview.widget.CardView>

</GridLayout>
